# wasted-token-tracker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  billing-window.js  budget.js  cli.js  currency.js  docker-compose.yml  index.js  mcp.js  models.js  package.json  parser.js  security.js  server.js  sql_scanner.js  watcher.js  webhooks.js
overlay/: index.html  main.js  package.json
providers/: aider.js  amp.js  antigravity.js  claude.js  cline.js  codex.js  continuedev.js  copilot.js  cursor.js  extended.js  geminicli.js  index.js  roocode.js  types.js  windsurf.js  zed.js
public/: app.js  index.html
tauri-overlay/: build.ps1  index.html  setup.ps1
tauri-overlay/src-tauri/: Cargo.toml  tauri.conf.json
tauri-overlay/src-tauri/src/: main.rs
tray/: launcher.js
